Scrollbar bug fix

--- a/spa/src/app/files/files.component.scss
+++ b/spa/src/app/files/files.component.scss
@@ -11,7 +11,7 @@
     flex: 1; // Push footer to bottom of available space (inside snapper)
 
     .layout-column {
-        //height: 100%; // Content to take available space
+        height: 100%; // Content to take available space
     }
 
     /* Sticky components */
